# sdl-jstest

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README  README.md  SConscript  SConstruct  flake.nix  gamecontrollerdb.txt  guix.scm  io.gitlab.sdl_jstest.sdl2_jstest.json  io.gitlab.sdl_jstest.sdl_jstest.json  ncurses-6.0.json  ncurses-6.1.json  sdl-jstest.1  sdl-jstest.appdata.xml.in  sdl-jstest.c  sdl-jstest.nix  sdl-jstest.xml  sdl2-jstest.1  sdl2-jstest.appdata.xml.in  sdl2-jstest.c  sdl2-jstest.xml
.github/workflows/: build.yml  release.yml
debian/: changelog  control  copyright  rules
mk/cmake/: GetProjectVersion.cmake
src/: sdl-jstest.c  sdl2-jstest.c
src/utils/: dualsense.h
